--- a/Presentations/images/DB.graffle/data.plist
+++ b/Presentations/images/DB.graffle/data.plist
@@ -254,7 +254,7 @@
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf250
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
@@ -556,7 +556,7 @@ range [
 				<key>Pad</key>
 				<integer>3</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf250
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
@@ -659,7 +659,7 @@ inputframe "frame.b2\
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf250
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
@@ -753,7 +753,7 @@ outputframe "frame.b1"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf250
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
@@ -947,7 +947,7 @@ outputframe "frame.b2"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf250
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
@@ -1338,7 +1338,7 @@ range [
 				<key>Pad</key>
 				<integer>3</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf250
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
@@ -1432,7 +1432,7 @@ inputframe "frame.b3"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf250
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
@@ -1526,7 +1526,7 @@ outputframe "frame.b1"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf250
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
@@ -1620,7 +1620,7 @@ outputframe "frame.b2"}</string>
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf949
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1038\cocoasubrtf250
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
@@ -1659,66 +1659,17 @@ outputframe "frame.b3"}</string>
 			<dict>
 				<key>ID</key>
 				<integer>10</integer>
-				<key>Info</key>
-				<integer>2</integer>
-			</dict>
-			<key>ID</key>
-			<integer>14</integer>
-			<key>OrthogonalBarAutomatic</key>
-			<true/>
-			<key>OrthogonalBarPosition</key>
-			<real>19.533096313476562</real>
-			<key>Points</key>
-			<array>
-				<string>{240.945, 651.968}</string>
-				<string>{311.811, 375.591}</string>
-			</array>
-			<key>Style</key>
-			<dict>
-				<key>stroke</key>
-				<dict>
-					<key>Cap</key>
-					<integer>0</integer>
-					<key>CornerRadius</key>
-					<real>4</real>
-					<key>HeadArrow</key>
-					<string>FilledArrow</string>
-					<key>LineType</key>
-					<integer>2</integer>
-					<key>TailArrow</key>
-					<string>0</string>
-					<key>Width</key>
-					<real>2</real>
-				</dict>
-			</dict>
-			<key>Tail</key>
-			<dict>
-				<key>ID</key>
-				<integer>7</integer>
-				<key>Info</key>
-				<integer>1</integer>
-			</dict>
-		</dict>
-		<dict>
-			<key>AllowLabelDrop</key>
-			<false/>
-			<key>Class</key>
-			<string>LineGraphic</string>
-			<key>Head</key>
-			<dict>
-				<key>ID</key>
-				<integer>10</integer>
 			</dict>
 			<key>ID</key>
 			<integer>13</integer>
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>19.2830810546875</real>
+			<real>19.532913208007812</real>
 			<key>Points</key>
 			<array>
-				<string>{241.445, 467.717}</string>
-				<string>{311.811, 375.591}</string>
+				<string>{240.945, 467.716}</string>
+				<string>{311.811, 283.464}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1761,11 +1712,11 @@ outputframe "frame.b3"}</string>
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>19.2830810546875</real>
+			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{241.445, 283.465}</string>
-				<string>{311.811, 375.591}</string>
+				<string>{240.945, 283.464}</string>
+				<string>{311.811, 283.464}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1808,11 +1759,11 @@ outputframe "frame.b3"}</string>
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>19.2830810546875</real>
+			<real>19.532913208007812</real>
 			<key>Points</key>
 			<array>
-				<string>{241.445, 99.2126}</string>
-				<string>{311.811, 375.591}</string>
+				<string>{240.945, 99.2127}</string>
+				<string>{311.811, 283.464}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1840,18 +1791,24 @@ outputframe "frame.b3"}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{311.811, 290.551}, {226.772, 170.079}}</string>
+			<string>{{311.811, 198.425}, {226.772, 170.079}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
 			<integer>10</integer>
 			<key>ImageID</key>
-			<integer>19</integer>
+			<integer>33</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{1, 0}</string>
 				<string>{-1, 0}</string>
 			</array>
+			<key>ManualSizeImage</key>
+			<string>YES</string>
+			<key>Offset</key>
+			<string>{0, -0.04}</string>
+			<key>Scale</key>
+			<real>0.5</real>
 			<key>Shape</key>
 			<string>Rectangle</string>
 			<key>Style</key>
@@ -1871,12 +1828,18 @@ outputframe "frame.b3"}</string>
 			<key>ID</key>
 			<integer>9</integer>
 			<key>ImageID</key>
-			<integer>16</integer>
+			<integer>34</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{1, 0}</string>
 				<string>{-1, 0}</string>
 			</array>
+			<key>ManualSizeImage</key>
+			<string>YES</string>
+			<key>Offset</key>
+			<string>{0, -0.04}</string>
+			<key>Scale</key>
+			<real>0.5</real>
 			<key>Shape</key>
 			<string>Rectangle</string>
 			<key>Style</key>
@@ -1896,37 +1859,18 @@ outputframe "frame.b3"}</string>
 			<key>ID</key>
 			<integer>8</integer>
 			<key>ImageID</key>
-			<integer>17</integer>
+			<integer>35</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{1, 0}</string>
 				<string>{-1, 0}</string>
 			</array>
-			<key>Shape</key>
-			<string>Rectangle</string>
-			<key>Style</key>
-			<dict>
-				<key>fill</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-			</dict>
-		</dict>
-		<dict>
-			<key>Bounds</key>
-			<string>{{14.1732, 566.929}, {226.772, 170.079}}</string>
-			<key>Class</key>
-			<string>ShapedGraphic</string>
-			<key>ID</key>
-			<integer>7</integer>
-			<key>ImageID</key>
-			<integer>18</integer>
-			<key>Magnets</key>
-			<array>
-				<string>{1, 0}</string>
-				<string>{-1, 0}</string>
-			</array>
+			<key>ManualSizeImage</key>
+			<string>YES</string>
+			<key>Offset</key>
+			<string>{0, -0.04}</string>
+			<key>Scale</key>
+			<real>0.5</real>
 			<key>Shape</key>
 			<string>Rectangle</string>
 			<key>Style</key>
@@ -1946,12 +1890,18 @@ outputframe "frame.b3"}</string>
 			<key>ID</key>
 			<integer>6</integer>
 			<key>ImageID</key>
-			<integer>20</integer>
+			<integer>36</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{1, 0}</string>
 				<string>{-1, 0}</string>
 			</array>
+			<key>ManualSizeImage</key>
+			<string>YES</string>
+			<key>Offset</key>
+			<string>{0, -0.04}</string>
+			<key>Scale</key>
+			<real>0.5</real>
 			<key>Shape</key>
 			<string>Rectangle</string>
 			<key>Style</key>
@@ -1982,9 +1932,12 @@ outputframe "frame.b3"}</string>
 	<key>HPages</key>
 	<integer>1</integer>
 	<key>ImageCounter</key>
-	<integer>33</integer>
+	<integer>37</integer>
 	<key>ImageLinkBack</key>
 	<array>
+		<dict/>
+		<dict/>
+		<dict/>
 		<dict/>
 		<dict/>
 		<dict/>
@@ -1997,6 +1950,10 @@ outputframe "frame.b3"}</string>
 	</array>
 	<key>ImageList</key>
 	<array>
+		<string>image36.tiff</string>
+		<string>image35.tiff</string>
+		<string>image34.tiff</string>
+		<string>image33.tiff</string>
 		<string>image32.png</string>
 		<string>image31.png</string>
 		<string>image30.png</string>
@@ -2005,7 +1962,6 @@ outputframe "frame.b3"}</string>
 		<string>image19.rgb</string>
 		<string>image18.rgb</string>
 		<string>image17.rgb</string>
-		<string>image16.rgb</string>
 	</array>
 	<key>IsPalette</key>
 	<string>NO</string>
@@ -2109,7 +2065,7 @@ outputframe "frame.b3"}</string>
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-11-23 10:14:30 +0100</string>
+	<string>2010-03-11 17:20:15 +0100</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -2202,11 +2158,11 @@ outputframe "frame.b3"}</string>
 		<key>FitInWindow</key>
 		<true/>
 		<key>Frame</key>
-		<string>{{270, 48}, {1036, 830}}</string>
+		<string>{{358, 261}, {555, 477}}</string>
 		<key>VisibleRegion</key>
-		<string>{{0, -13}, {1485, 1063.21}}</string>
+		<string>{{0, -2.00006}, {1485, 1042.25}}</string>
 		<key>Zoom</key>
-		<real>1.248837947845459</real>
+		<real>0.66050201654434204</real>
 	</dict>
 </dict>
 </plist>
